--- a/public/posts/api-journey-client-side.mdx
+++ b/public/posts/api-journey-client-side.mdx
@@ -196,7 +196,7 @@ User logins appear slightly differently for web, desktop and mobile platforms an
 For mobile clients an integrated browser overlays the views, which wait on the response:
 
 <div className='smallimage'>
-![mobile login](../images/270/mobile-login.jpg?v=20240912)
+    <img src='../images/270/mobile-login.jpg?v=20240912' alt='mobile login' />
 </div>
 
 For a desktop client, the app renders a *login in progress* window, while the user signs in with a disconnected system browser:
@@ -314,7 +314,7 @@ OAuth clients can experience some advanced failure scenarios that can be difficu
 To provide the behaviours that I articulate, this blog's API require some plumbing code. A folder structure classifies each class as *view* related or *plumbing* related. In real clients you might externalise some of the plumbing to one or more shared libraries. The goal in a real organization would be to use clean, scalable code for the valuable views and view models.
 
 <div className='smallimage'>
-![code layout](../images/270/code-layout.jpg)
+    <img src='../images/270/code-layout.jpg' alt='code layout' />
 </div>
 
 ### Developers Run a Productive Setup
