--- a/public/posts/api-journey-server-side.mdx
+++ b/public/posts/api-journey-server-side.mdx
@@ -323,7 +323,7 @@ The logs enable <Link href='/posts/api-technical-support-analysis'>people-focuse
 To provide the behaviours that I articulate, this blog's API require some plumbing code. A folder structure classifies each class as *host*, *logic* or *plumbing*. In real APIs you might externalise some of the plumbing to one or more shared libraries. The goal in a real organization would be to use clean, scalable code for the valuable business logic.
 
 <div className='smallimage'>
-![api code layout](../images/260/api-code-layout.jpg)
+    <img src='../images/260/api-code-layout.jpg' alt='api code layout' />
 </div>
 
 ### Developers Run a Productive Setup
