--- a/public/posts/how-to-run-the-react-js-spa.mdx
+++ b/public/posts/how-to-run-the-react-js-spa.mdx
@@ -38,7 +38,7 @@ The repository's code consists of the following main areas:
 | <span style={{color:'green'}}>**deployment**</span> | Resources used to manage and automate web host deployments. |
 
 <div className='smallimage'>
-![code layout](../images/230/code-layout.jpg)
+    <img src='../images/230/code-layout.jpg' alt='code layout' />
 </div>
 
 ### Step 4: View the React Code
