--- a/public/posts/ios-code-sample-coding-key-points.mdx
+++ b/public/posts/ios-code-sample-coding-key-points.mdx
@@ -7,7 +7,7 @@ Previously we described our <Link href='/posts/ios-code-sample-infrastructure'>i
 One of this blog’s coding goals is to use the same classes across multiple platforms. Our iOS App uses the same logical separation of responsibilities into classes as the earlier <Link href='/posts/reactjs-codingkeypoints'>React SPA</Link>:
 
 <div className='smallimage'>
-![code layout](../images/570/code-layout.jpg?v=20240914)
+    <img src='../images/570/code-layout.jpg?v=20240914' alt='code layout' />
 </div>
 
 ### Unobtrusive OAuth Integration
@@ -15,7 +15,7 @@ One of this blog’s coding goals is to use the same classes across multiple pla
 The view and view model classes below call our OAuth-secured API, and need to deal with *triggering login redirects* and *refreshing access tokens*. This can also involve concurrency, which we will explore shortly.
 
 <div className='smallimage'>
-![view classes](../images/570/view-classes.jpg)
+    <img src='../images/570/view-classes.jpg' alt='view classes' />
 </div>
 
 Companies will want to complete the tricky plumbing code once, then focus on business value, by growing the UI and API code.
@@ -330,7 +330,7 @@ protocol Authenticator {
 Our app has two views that load concurrently and fire three concurrent API requests. The main view data is retrieved and there are also two additional API requests to get user info. OAuth user info is retrieved from the authorization server and additional user attributes are retrieved from the API.
 
 <div className='smallimage'>
-![concurrent views](../images/570/concurrent-views.jpg?v=20240914)
+    <img src='../images/570/concurrent-views.jpg?v=20240914' alt='concurrent views' />
 </div>
 
 A *ViewModelCoordinator* object is used to wait for all views to load. In the event of any view receiving a permanent 401 response from the API, a single OAuth redirect is triggered by the main view:
@@ -705,7 +705,7 @@ typedef NS_ENUM(NSInteger, OIDErrorCodeOAuthToken) {
 The app’s error handling is diligent about capturing these runtime details, to help with OAuth problem resolution:
 
 <div className='smallimage'>
-![appauth error](../images/570/appauth-error.jpg?v=20240914)
+    <img src='../images/570/appauth-error.jpg?v=20240914' alt='appauth error' />
 </div>
 
 By coding in Swift, our iOS sample requires fewest technical layers to integrate AppAuth libraries, and we have first class access to error details.
