--- a/public/posts/azure-active-directory-setup.mdx
+++ b/public/posts/azure-active-directory-setup.mdx
@@ -176,7 +176,7 @@ git clone https://github.com/gary-archer/oauth.websample.azure
 Identify the configuration files containing OAuth settings used by the UI and API:
 
 <div className='smallimage'>
-![code layout](../images/190/code-layout.jpg)
+    <img src='../images/190/code-layout.jpg' alt='code layout' />
 </div>
 
 ### Step 9. Update SPA Configuration
