--- a/public/posts/how-to-run-the-ios-code-sample.mdx
+++ b/public/posts/how-to-run-the-ios-code-sample.mdx
@@ -53,13 +53,13 @@ You can now run our demo app via the *Run* icon in the Xcode toolbar. You may th
 Next save the password when prompted, then navigate between views by clicking an item in the companies view or using the *Home* button:
 
 <div className='smallimage'>
-![running app](../images/550/running-app.jpg?v=20240914)
+    <img src='../images/550/running-app.jpg?v=20240914' alt='running app' />
 </div>
 
 Logins require associated domain registration to work on your simulator. If registration fails, you will receive the following display. The cause is that a mobile deep link is incorrectly processed in the browser. The next post, on iOS infrastructure, explains how you can resolve this problem, if it impacts you.
 
 <div className='smallimage'>
-![not found login response](../images/550/not-found-login-response.jpg?v=20240914)
+    <img src='../images/550/not-found-login-response.jpg?v=20240914' alt='not found login response' />
 </div>
 
 ### Step 5: Understand Configuration Settings
@@ -138,13 +138,13 @@ The token data is then saved to the iOS keychain, which ensures that the data is
 It is worth performing certain tests while the ASWebAuthenticationSession window is active, to ensure that the app does not throw exceptions or recreate views unnecessarily:
 
 <div className='smallimage'>
-![login](../images/550/login.jpg?v=20240914)
+    <img src='../images/550/login.jpg?v=20240914' alt='login' />
 </div>
 
 The first of these is to switch away from the app and then reactivate it from its shortcut. Verify that this does not cause any application problems:
 
 <div className='smallimage'>
-![shortcut](../images/550/shortcut.jpg?v=20240914)
+    <img src='../images/550/shortcut.jpg?v=20240914' alt='shortcut' />
 </div>
 
 Similarly I would recommend changing the screen orientation half way through login and then completing the sign in.
@@ -168,7 +168,7 @@ xcrun simctl openurl booted https://mobile.authsamples.com/finalmobileapp/deepli
 We can use the *Expire Access Token* and *Reload Data* buttons to cause an invalid token to be sent to the API, resulting in a 401 response:
 
 <div className='smallimage'>
-![access token expiry](../images/550/access-token-expiry.jpg?v=20240914)
+    <img src='../images/550/access-token-expiry.jpg?v=20240914' alt='access token expiry' />
 </div>
 
 After every API call the UI checks for 401 responses, and handles them by getting a new access token. The API request is then retried once with the new token, so that the user session is silently extended. Note that a mobile app is a public client and the refresh token is not protected with a client credential:
@@ -180,7 +180,7 @@ After every API call the UI checks for 401 responses, and handles them by gettin
 We can use *Expire Refresh Token* followed by *Reload Data* to simulate the end of a user session, which might occur if a user left the app running overnight:
 
 <div className='smallimage'>
-![refresh token expiry](../images/550/refresh-token-expiry.jpg?v=20240914)
+    <img src='../images/550/refresh-token-expiry.jpg?v=20240914' alt='refresh token expiry' />
 </div>
 
 On the next request for data the attempt to renew the access token will fail, and the result of the refresh token grant message will be an *Invalid Grant* response:
@@ -198,7 +198,7 @@ AWS Cognito also uses a vendor specific logout solution and the logout request r
 When logout completes we are returned to the below post logout view within our app. In a real world app you could then test logging in as another user with different settings or permissions.
 
 <div className='smallimage'>
-![new user login](../images/550/new-user-login.jpg?v=20240914)
+    <img src='../images/550/new-user-login.jpg?v=20240914' alt='new user login' />
 </div>
 
 ### Step 15: Test Failure Scenarios
@@ -213,13 +213,13 @@ Our mobile app runs multiple views which could fail concurrently, so we implemen
 Our error display looks as follows after concurrent view failures. The user can click a hyperlink to see details, or press the *Home* button to retry:
 
 <div className='smallimage'>
-![error summary](../images/550/error-summary.jpg?v=20240914)
+    <img src='../images/550/error-summary.jpg?v=20240914' alt='error summary' />
 </div>
 
 The summary view uses an iOS modal sheet to display a view with error details, which would help to enable fast problem resolution:
 
 <div className='smallimage'>
-![error details](../images/550/error-details.jpg?v=20240914)
+    <img src='../images/550/error-details.jpg?v=20240914' alt='error details' />
 </div>
 
 ### Where Are We?
