--- a/public/posts/spring-boot-api-coding-model.mdx
+++ b/public/posts/spring-boot-api-coding-model.mdx
@@ -11,7 +11,7 @@ Our advanced Java API consists of three main areas:
 - Common Code (plumbing)
 
 <div className='smallimage'>
-![code layout](../images/370/code-layout.jpg)
+    <img src='../images/370/code-layout.jpg' alt='code layout' />
 </div>
 
 In a real API platform, much of the plumbing folder could be extracted into one or more shared library references and there would be far less code.
@@ -21,7 +21,7 @@ In a real API platform, much of the plumbing folder could be extracted into one 
 Our API entry point is the below *FinalApiApplication* class:
 
 <div className='smallimage'>
-![startup logic](../images/370/startup-logic.jpg)
+    <img src='../images/370/startup-logic.jpg' alt='startup logic' />
 </div>
 
 We use standard Spring Boot extensibility points via the following classes, which run when our API starts:
@@ -209,7 +209,7 @@ To solve this problem I created a [Spring Boot Custom Scope](https://www.baeldun
 API logging is also implemented via plumbing code, and the end goal is to enable <Link href='/posts/api-technical-support-analysis'>platform wide technical support queries by people</Link>.
 
 <div className='smallimage'>
-![logging classes](../images/370/logging-classes.jpg)
+    <img src='../images/370/logging-classes.jpg' alt='logging classes' />
 </div>
 
 The log entry is a natural request scoped object so we use the following factory method to create it when another class first accesses it during the lifetime of an API request, then make it injectable:
