--- a/public/posts/web-technology-setup.mdx
+++ b/public/posts/web-technology-setup.mdx
@@ -144,7 +144,7 @@ The *tsconfig.json* file for the SPA is a little different to that for the Node.
 You can find browser types under the *node_modules/typescript/lib* folder and then use objects such as *HTMLInputElement*.
 
 <div className='smallimage'>
-![typescript library](../images/90/typescript-lib.jpg)
+    <img src='../images/90/typescript-lib.jpg' alt='typescript library' />
 </div>
 
 ### Writing Code: Efficient Imports
