--- a/public/posts/log-aggregation-setup.mdx
+++ b/public/posts/log-aggregation-setup.mdx
@@ -41,7 +41,7 @@ git clone https://github.com/gary-archer/logaggregation.elasticsearch
 We will run scripts from the *docker-local* folder to deploy a development setup for Elasticsearch with working API log aggregation:
 
 <div className='smallimage'>
-![file layout](../images/390/file-layout.jpg?v=20240818)
+    <img src='../images/390/file-layout.jpg?v=20240818' alt='file layout' />
 </div>
 
 ### Step 2: Configure DNS and SSL
