--- a/public/posts/net-core-api-oauth-integration.mdx
+++ b/public/posts/net-core-api-oauth-integration.mdx
@@ -163,7 +163,7 @@ protected override async Task<AuthenticateResult> HandleAuthenticateAsync()
 A number of small classes are used to implement the desired behaviour. The main work is to validate the JWT received in the HTTP request, then return a *ClaimsPrincipal* that is useful to the rest of the API’s code.
 
 <div className='smallimage'>
-![oauth classes](../images/330/oauth-classes.jpg)
+    <img src='../images/330/oauth-classes.jpg' alt='oauth classes' />
 </div>
 
 ### JWT Access Token Validation
